# QuattroFormaggi

./: README.md  architecture.md  pyproject.toml  workshop_notes.md
agents/knowledge/: keywords.md
agents/workflows/: QueryInterpreter.md
geo-insight/: README.md
geo-insight/src/: app.py  requirements.txt
geo-insight/src/prompts/: BriefingNoteWriter.md
geo-insight/src/quattroformaggi/: BriefingNoteWriter.py  QueryInterpreter.py  query_to_articles.py
notebooks/: New Notebook 2026-04-18 15_31_21.ipynb  agent_experiments.ipynb  news_table.ipynb  reliefweb_scraper.ipynb
prompts/: BriefingNoteWriter.md  QueryInterpreter.md
queries/: master_table_final.dbquery.ipynb  master_table_step_1.dbquery.ipynb
side-challenges/: claude.txt
src/models/: QuerySpec.py
src/quattroformaggi/: BriefingNoteWriter.py  QueryInterpreter.py  __init__.py  app.ipynb  main.py  query_to_sql.py
