[project]
name = "quattroformaggi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maksnowak", email = "59841779+maksnowak@users.noreply.github.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "anthropic>=0.96.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
